[gd_scene load_steps=2 format=3]

[ext_resource type="Script" uid="uid://qbwnsds7p1fw" path="res://Scripts/Inventory/InventorySlot.gd" id="1_us996"]
[ext_resource type="Texture2D" path="res://Scenes/UI/InventorySlotHighlight.tres" id="2_pglwb"]


[node name="InventorySlot" type="PanelContainer"]
custom_minimum_size = Vector2(96, 96)
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6
script = ExtResource("1_us996")

[node name="SelectionHighlight" type="NinePatchRect" parent="."]
layout_mode = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pglwb")
draw_center = true
modulate = Color(1, 1, 1, 0.8)
visible = false

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5
visible = false

[node name="ItemCount" type="Label" parent="."]
layout_mode = 0
anchors_preset = 9
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -32.0
offset_right = -8.0
offset_bottom = -8.0
horizontal_alignment = 2
vertical_alignment = 2
text = "1"
visible = false

